# gazer

./: CMakeLists.txt
doc/: CMakeLists.txt  gazer.dox.in  versionfilter.sh
media/shaders/: tonemap.cg
src/: CMakeLists.txt  GLSurface.cpp  GLSurface.h  MainWindow.cpp  MainWindow.h  main.cpp  shaders.h.in
